[project]
name = "trovly"
version = "0.2.0"
description = "Trovly — AI-powered job scanner SaaS"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

# ─── Ruff: linting + import sorting ──────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "tests/fixtures",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "S101",   # assert is fine in tests
    "S311",   # non-cryptographic random is fine for jitter/sampling
    "N803",   # arg name lowercase — Streamlit conventions clash
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]

# ─── Black: formatting ───────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
/(
  | venv
  | \.venv
  | __pycache__
)/
'''

# ─── Pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:streamlit.*",
    "ignore::DeprecationWarning:torch.*",
]
